Use rewind() instead of freopen()'ing the same file for no reason. Also, close the file when done instead of dropping it on the floor. Obsoletes PR 50579.